# spec-trait

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  main.yml  pr.yml
crates/spec-trait-bin/: Cargo.toml
crates/spec-trait-bin/src/: main.rs
crates/spec-trait-macro/: Cargo.toml  build.rs
crates/spec-trait-macro/src/: annotations.rs  body.rs  cache.rs  conditions.rs  constraints.rs  conversions.rs  env.rs  generics.rs  impls.rs  lib.rs  spec.rs  traits.rs  types.rs  vars.rs
crates/spec-trait-order/: Cargo.toml
crates/spec-trait-order/src/: crates.rs  file.rs  files.rs  lib.rs
crates/spec-trait-utils/: Cargo.toml
crates/spec-trait-utils/src/: cache.rs  conditions.rs  conversions.rs  env.rs  impls.rs  lib.rs  lifetimes.rs  parsing.rs  specialize.rs  traits.rs  types.rs
spec-trait-impl/: Cargo.toml
spec-trait-impl.backup/.cargo/: config.toml
spec-trait-impl.backup/crates/spec-trait-bin/src/: main.rs
spec-trait-impl.backup/crates/spec-trait-macro/src/: annotations.rs  lib.rs  vars.rs
spec-trait-impl.backup/crates/spec-trait-order/: Cargo.toml
spec-trait-impl.backup/crates/spec-trait-order/src/: crates.rs  lib.rs
spec-trait-impl.backup/crates/spec-trait-utils/: Cargo.toml
spec-trait-impl/crates/spec-trait-bin/: Cargo.toml  build.rs
spec-trait-impl/crates/spec-trait-bin/src/: main.rs
spec-trait-impl/crates/spec-trait-macro/: Cargo.toml
spec-trait-impl/crates/spec-trait-macro/src/: annotations.rs  constraints.rs  lib.rs  spec.rs  vars.rs
spec-trait-inst/: Cargo.toml  README.md  rust-toolchain.toml
spec-trait-inst/src/: lib.rs
spec-trait-inst/src/analysis/: mod.rs  utils.rs
spec-trait-inst/src/analysis/sti_analysis/: mod.rs  sti_visitor.rs
spec-trait-inst/src/instrument/: cli.rs  driver.rs
spec-trait-inst/tests/: test_workspaces.rs  utils.rs
spec-trait-inst/tests/workspaces/first/: expected_output.plug_version
spec-trait-inst/tests/workspaces/first/src/: main.rs
src/: main.rs
(+18 files in other folders)
