[package]
name = "spec-trait-macro"
version = "0.1.0"
edition = "2024"

[dependencies]
spec-trait-utils = { path = "../spec-trait-utils" }
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.9.2"
proc-macro2 = "1.0"


[build-dependencies]
chrono = "0.4"

[lib]
proc-macro = true
